<resources>
    <string name="app_name">UTripod</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset"><u>Reset</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="account">Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="search_your_location">Search your location</string>
    <string name="cancel">Cancel</string>
    <string name="location_name">Location Name</string>
    <string name="region">Region</string>
    <string-array name="profession">
        <item>A Public viewer</item>
        <item>Actor</item>
        <item>Actress</item>
        <item>Art director</item>
        <item>Assistant director</item>
        <item>Audio Grapher</item>
        <item>Camera operators</item>
        <item>Choreographer</item>
        <item>Cinema drivers</item>
        <item>Cinematographer</item>
        <item>Comedians</item>
        <item>Costume designer</item>
        <item>Dancer</item>
        <item>Director</item>
        <item>Dubbing artists</item>
        <item>Editor</item>
        <item>Film equipments</item>
        <item>Jr.Artist</item>
        <item>Makeup man</item>
        <item>Music director</item>
        <item>Nagara</item>
        <item>Painters</item>
        <item>Photographer</item>
        <item>Poster designing</item>
        <item>Producer</item>
        <item>Production assistants</item>
        <item>Production executive</item>
        <item>Singer</item>
        <item>Studio workers</item>
        <item>Stunt director</item>
        <item>Stunt artists</item>
        <item>Writers</item>
    </string-array>
    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="age">
        <item>Age</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">date</string>
    <string name="lorem_ipsum_dollar_summit">lorem ipsum dollar summit</string>
    <string name="tags_and_hashtags">#Tags_and_HashTags</string>
    <string name="_0">0</string>
    <string name="promoted">Sponsored content</string>
    <string name="post">post</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="tags">#tags</string>
    <string name="promote">Promote</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_video">Upload Video</string>
    <string name="tag_friends">Tag friends</string>
    <string name="search_user">Search user</string>
    <string name="search_message">Search chats</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="save_changes">Save changes</string>
    <string name="first_name">First name</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="enter_password_to_confirm">Enter password to confirm</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="old_password">Old Password</string>
    <string name="promote_to_selected_region">Promote to selected region</string>
    <string name="promote_to_all_regions">Promote to all regions</string>
    <string name="price_rs_50">Price : Rs:50</string>
    <string name="days">Days</string>
    <string name="Razorpay_API_key">rzp_live_kvgchGZT61e3Fn</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="comment">comment</string>
    <string name="reply">Reply</string>
    <string name="an_otp_is_send_to_91_1234567890">An OTP is send to +91 1234567890</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="resends_in_30s">Resends in 30s</string>
    <string name="resend">Resend</string>
    <string name="reset_password">Reset Password</string>
    <string name="no_chats_found">No chats found!</string>
    <string name="create_group">Create Group</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="type_your_message">Type your message</string>
    <string name="message">Message</string>
    <string name="participants_n">Participants (N)</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="leave">Leave</string>
    <string name="add_people">Add People</string>
    <string name="edit_group">Edit Group</string>
    <string name="group_description">Group Description</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="uvis">Uvis</string>
    <string name="trending_post_s">Trending Post\'s</string>
    <string name="hashtag">#hashtag</string>
    <string name="_15s">15s</string>
    <string name="processing">Processing</string>
    <string name="start_time_0">Start time : 0</string>
    <string name="_5s">5s</string>
    <string name="_10s">10s</string>
    <string name="start">Start</string>
    <string name="music_name">Music name</string>
    <string name="use">Use</string>
    <string name="enter_description">Enter description</string>
    <string name="notifications">Notifications</string>
    <string name="group_name">Group name</string>
    <string name="join">Join</string>
    <string name="made_in_india">Made In India</string>
    <string name="sign_up_">SIGN UP</string>
    <string name="enter_bio">Enter bio</string>
    <string name="submit">Submit</string>
    <string name="download">Download</string>
    <string name="my_promotions">My promotions</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="edit_profile">Edit profile</string>
    <string name="social_media_links">Social media links</string>
    <string name="logout">Logout</string>
    <string name="reset_">RESET</string>
    <string name="set_a_profile_photo">Set a profile photo</string>
    <string name="full_name">Full name</string>
    <string name="hide_this_post">Hide this post</string>
    <string name="save">Save</string>
    <string name="linkedin_link">Linkedin link</string>
    <string name="twitter_link">Twitter link</string>
    <string name="youtube_link">Youtube link</string>
    <string name="instagram_link">Instagram link</string>
    <string name="facebook_link">Facebook link</string>
    <string name="no_promotions_found">No promotions found!</string>
    <string name="u_search">U - Search</string>
    <string name="unfollow">Unfollow</string>
    <string name="promote_duration_in_days">Promote duration in days :</string>
    <string name="promote_in_selected_region">Promote in Selected Region</string>
    <string name="promote_in_selected_city">Promote in Selected City</string>
    <string name="promote_all_over_india">Promote All Over India</string>
    <string name="state">State</string>
    <string name="promote_in_selected_location">Promote in selected location</string>
    <string name="active_users">Active users</string>
    <string name="no_active_users">No active users</string>
    <string name="comments">Comments</string>
    <string name="follow">Follow</string>
    <string name="privacy_and_terms">Privacy and terms &amp; conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms Of Use</string>
</resources>