<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="45sp"
        android:layout_height="45sp"
        android:background="@drawable/round_image"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/username"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/imgProfile"
        app:layout_constraintTop_toTopOf="@id/imgProfile" />


    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/recieve_message_shape"
        android:maxWidth="300dp"
        android:padding="8dp"
        android:text="@string/message"
        android:autoLink="web"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/imgProfile"
        app:layout_constraintTop_toBottomOf="@id/txtUsername" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/grey"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@id/txtMessage"
        app:layout_constraintTop_toBottomOf="@id/txtMessage"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>