<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000"
    android:id="@+id/layout"
    android:padding="8dp">


    <ImageView
        android:id="@+id/imgMusic"
        android:layout_width="55dp"
        android:layout_height="55sp"
        android:background="@drawable/music_shape"
        android:contentDescription="@string/app_name"
        android:padding="8dp"
        android:src="@drawable/ic_music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/grey" />

    <TextView
        android:id="@+id/txtMusic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/music_name"
        android:textColor="#fff"
        app:layout_constraintEnd_toStartOf="@id/btnUse"
        app:layout_constraintStart_toEndOf="@id/imgMusic"
        app:layout_constraintTop_toTopOf="@id/imgMusic" />

    <Button
        android:id="@+id/btnUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#DA1C5C"
        android:text="@string/use"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgMusic" />


</androidx.constraintlayout.widget.ConstraintLayout>