<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.activities.GroupInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/imgImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/image_place_holder" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txtDescription"
                android:background="#54000000"
                android:padding="5dp"
                android:text="@string/group_description"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#54000000"
                android:padding="5dp"
                android:textColor="@color/white" />
        </RelativeLayout>


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/txtEdit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/group_but_bg"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/edit_group"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtAdd"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/group_but_bg"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/add_people"

                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtShare"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/group_but_bg"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/share"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtLeave"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/group_but_bg"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/leave"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/group_but_bg"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/clear_chat"
                    android:textColor="@color/white" />

            </LinearLayout>
        </HorizontalScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eee" />


        <TextView
            android:id="@+id/txtMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/participants_n"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_baseline_person_24"
            app:drawableTint="@color/white" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>